{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 128,
  "lineage": "328f1811-d668-c8c7-a6a9-bc1e92720169",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.233.12.210",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-01-28T02:12:24.661-08:00",
            "id": "oceanic-monitor-262408/europe-west1/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "oceanic-monitor-262408",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/regions/europe-west1/addresses/reddit-app-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/zones/europe-west1-b/instances/reddit-app"
            ]
          }
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-28T02:12:24.472-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-mongo-default",
            "name": "allow-mongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/global/networks/default",
            "priority": 1000,
            "project": "oceanic-monitor-262408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/global/firewalls/allow-mongo-default",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "reddit-app"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-28T02:12:24.594-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-puma-default",
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/global/networks/default",
            "priority": 1000,
            "project": "oceanic-monitor-262408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-28T02:12:24.470-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-ssh",
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/global/networks/default",
            "priority": 1000,
            "project": "oceanic-monitor-262408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_web",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "88"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-28T03:20:38.687-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-web",
            "name": "default-allow-web",
            "network": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/global/networks/default",
            "priority": 1000,
            "project": "oceanic-monitor-262408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/global/firewalls/default-allow-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/global/images/reddit-app-base",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/zones/europe-west1-b/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "reddit-app",
            "instance_id": "7672119083937937378",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "Ganhart:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCvSWuF+sXhOQveU374Oll9l9QfUYxOvr5CuxSMp7oSc4oKF23YXHFv+t5IdEaQDiaFjSCP7DLxWeZsFhSTouFEanmlUaXe8oYpRTvcE8MP5DKiyN37X/DJX23od8xWhXHH8OYvPD8OFS8aR+PCIbjaS3eu/i1mUkrQ2KZZIQZcI8aee/ahJ5dry0XoidXEMYh+g8h0MWXYfjxbs3RUqlJjbwODl6BqCpoOdQ5NPmN+Hg3oyWjpUNeVrX9nQ4Ab+gj4niVDxrLtEukif2YpZXUGBX8xk/oLAst2kSFmZHFI7KLZSIkRLK7M54RHH7YUU0lEhdGpNV9tGiXS1kLi+fHP Ganhart\n"
            },
            "metadata_fingerprint": "ioxqSRR0YVc=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.233.12.210",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/global/networks/default",
                "network_ip": "10.132.15.195",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "oceanic-monitor-262408"
              }
            ],
            "project": "oceanic-monitor-262408",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/zones/europe-west1-b/instances/reddit-app",
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.app.google_compute_address.app_ip"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/global/images/reddit-db-base",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/zones/europe-west1-b/disks/reddit-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "reddit-db",
            "instance_id": "4815603298203449318",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "Ganhart:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCvSWuF+sXhOQveU374Oll9l9QfUYxOvr5CuxSMp7oSc4oKF23YXHFv+t5IdEaQDiaFjSCP7DLxWeZsFhSTouFEanmlUaXe8oYpRTvcE8MP5DKiyN37X/DJX23od8xWhXHH8OYvPD8OFS8aR+PCIbjaS3eu/i1mUkrQ2KZZIQZcI8aee/ahJ5dry0XoidXEMYh+g8h0MWXYfjxbs3RUqlJjbwODl6BqCpoOdQ5NPmN+Hg3oyWjpUNeVrX9nQ4Ab+gj4niVDxrLtEukif2YpZXUGBX8xk/oLAst2kSFmZHFI7KLZSIkRLK7M54RHH7YUU0lEhdGpNV9tGiXS1kLi+fHP Ganhart\n"
            },
            "metadata_fingerprint": "ioxqSRR0YVc=",
            "name": "reddit-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.76.112.146",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/global/networks/default",
                "network_ip": "10.132.15.194",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "oceanic-monitor-262408"
              }
            ],
            "project": "oceanic-monitor-262408",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/oceanic-monitor-262408/zones/europe-west1-b/instances/reddit-db",
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}